--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,13 @@ dmypy.json
 cython_debug/
 resources/secret.py
 messages/
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
